[package]
name = "asynchronous-concurrency-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3.2"
reqwest = "0.11.6"
select = "0.5.0"
tokio = { version = "1.13.0", features = ["full"] }
