[package]
name = "asynchronous-concurrency-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.6"
select = "0.5.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.70"
tokio = { version = "1.13.0", features = ["full"] }
urlencoded = "0.6.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "sqlite" ] }